--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.20",
+    "firebase": "^10.13.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
