--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.20",
     "firebase": "^10.13.2",
-    "next": "14.2.5",
+    "next": "^13.0.0",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
