--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.20",
     "firebase": "^10.13.2",
+    "firebase-admin": "^12.5.0",
     "next": "^13.0.0",
     "next-auth": "^4.24.7",
+    "openai": "^4.65.0",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
