--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.2",
     "firebase-admin": "^12.5.0",
     "next": "^13.0.0",
