--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-select": "^5.9.0",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
